pasboilerplate-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pas-boilerplate-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: registrationlb
          servicePort: 80
      - path: /submission
        backend:
          serviceName: submissionlb
          servicePort: 80
      - path: /quote
        backend:
          serviceName: quotelb
          servicePort: 80
      - path: /issue
        backend:
          serviceName: issuelb
          servicePort: 80
